# revolver

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
scripts/: build.sh  dev.sh  install.sh  server.sh  ui.sh
source/: AudioEngine.cpp  AudioEngine.h  DevServer.cpp  DevServer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ServerMain.cpp
specs/001-drum-humanizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-drum-humanizer/checklists/: requirements.md
specs/001-drum-humanizer/contracts/: message-protocol.md
ui/: bridge.js  index.html  keyboard.js  main.js  package-lock.json  package.json  styles.css  vite.config.js
